# SparrowAI

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: App.jsx  Themes.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  chat_sessions.rs  huggingface.rs  lib.rs  logging.rs  main.rs  ovms.rs  tests.rs
src-tauri/src/mcp/: client.rs  commands.rs  config.rs  mod.rs
src-tauri/src/rag/: documents.rs  embeddings.rs  mod.rs  reranker.rs  search.rs  vector_store.rs
src/components/: AddMcpServerDialog.jsx  ChatPage.jsx  DocumentsPage.jsx  DownloadsPage.jsx  InitialSetup.jsx  McpPage.jsx  ModelDetails.jsx  ModelList.jsx  ModelsPage.jsx  NotificationSnackbar.jsx  OvmsStatusDialog.jsx  SearchBar.jsx  SettingsDialog.jsx  Sidebar.jsx  index.js
src/components/chat/: ChatPage.jsx  index.js
src/components/documents/: DocumentsPage.jsx  index.js
src/components/layout/: AppLayout.jsx  PageContainer.jsx  Sidebar.jsx  index.js
src/components/mcp/: McpPage.jsx  index.js
src/components/models/: ModelDetails.jsx  ModelList.jsx  ModelsPage.jsx  SearchBar.jsx  index.js
src/components/settings/: SettingsDialog.jsx  index.js
src/components/ui/: Button.jsx  Card.jsx  LoadingSpinner.jsx  NotificationSnackbar.jsx  SearchInput.jsx  index.js
src/hooks/: index.js  useDownloadedModels.js  useLocalStorage.js  useNotification.js
src/store/: index.js  useAppStore.js  useAppStore.jsx  useChatStore.jsx
src/store/slices/: chatSlice.js  modelsSlice.js  settingsSlice.js  themeSlice.js  uiSlice.js
src/theme/: colors.js  components.js  index.js  typography.js
