[package]
name = "sparrow"
version = "0.2.0"
description = "A small but Powerful AI Assistant"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sparrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
urlencoding = "2.1"
# Async streaming
futures = "0.3"
# OVMS support
zip = "0.6"
async-openai = { git = "https://github.com/zhengchy95/async-openai", branch = "dev/sparrow-use" }
# Chat sessions support
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# RAG dependencies
# Document processing
pdf-extract = "0.7"
docx-rs = "0.4"
calamine = "0.24" # Excel files
lopdf = "0.32"

# Vector database
sled = "0.34" # Embedded key-value store
bincode = "1.3" # Serialization
nalgebra = "0.32" # Vector operations

# Additional utilities
walkdir = "2.0"
mime_guess = "2.0"

